# ecoro

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: build-all.yml  ecoro.yml  linux.yml  macos.yml  windows.yml
cmake/vcpkg/: vcpkg.cmake
examples/: CMakeLists.txt
examples/first-coroutine/: CMakeLists.txt  main.cpp
examples/scheduler/: CMakeLists.txt  main.cpp  scheduler.cpp  scheduler.hpp  signal.hpp
include/ecoro/: awaitable_concepts.hpp  awaitable_traits.hpp  awaiter_concepts.hpp  awaiter_traits.hpp  concepts.hpp  coroutine.hpp  executor.hpp  manual_reset_event.hpp  scheduler.hpp  scope.hpp  scope_guard.hpp  stop_token.hpp  sync_wait.hpp  task.hpp  task_promise.hpp  this_coro.hpp  when_all.hpp  when_any.hpp  when_first.hpp
include/ecoro/detail/: invoke_or_pass.hpp  std_concepts.hpp  sync_wait_task.hpp  task_awaitable.hpp  task_promise_impl.hpp  traits.hpp
src/: CMakeLists.txt  ecoro-config.cmake.in  scope.cpp  stop_token.cpp
src/cmake/: EcoroModule.cmake
src/core/: CMakeLists.txt  manual_reset_event.cpp  scope.cpp
src/core/include/ecoro/: awaitable_traits.hpp  concepts.hpp  config.hpp  coroutine.hpp  scheduler.hpp  sync_wait.hpp  task.hpp  when_any.hpp
src/core/include/ecoro/detail/: compiler.hpp  std_concepts.hpp  sync_wait_task.hpp  task_promise_impl.hpp
src/core/include/ecoro/detail/intrusive/: list.hpp
tests/: CMakeLists.txt  tst_awaitable_concepts.cpp  tst_awaitable_traits.cpp  tst_awaiter_concepts.cpp  tst_awaiter_traits.cpp  tst_manual_reset_event.cpp  tst_scope.cpp  tst_stop_token.cpp  tst_task.cpp  tst_when_all.cpp  tst_when_any.cpp  tst_when_first.cpp
tests/detail/: CMakeLists.txt
tests/detail/intrusive/: CMakeLists.txt  tst_list.cpp
tests/helpers/: noisy.hpp
vcpkg/triplets/: x64-linux-clang-libcxx.cmake
